Fix code review comments

--- a/packages/ui/src/Checkbox.module.scss
+++ b/packages/ui/src/Checkbox.module.scss
@@ -13,6 +13,10 @@
     @include h.visuallyHidden;
   }
 
+  .helperText {
+    margin-left: c.$grid * 1.5;
+  }
+
   // default visible checkmark
   .checkmark {
     width: c.$iconSizeSmall;
