--- a/packages/ui/src/TextField.module.scss
+++ b/packages/ui/src/TextField.module.scss
@@ -23,7 +23,7 @@ $marginLeftWithIcon: c.$grid * 5;
   }
 
   .helperText {
-    margin-left: c.$grid;
+    margin-left: c.$grid * 1.5;
     display: block;
   }
 
