refactor: add default Table column resizing widths to _sizes.scss

--- a/packages/ui/styles/constants/_sizes.scss
+++ b/packages/ui/styles/constants/_sizes.scss
@@ -52,3 +52,8 @@ $sliderThumbHoverBorderSize: 1px;
 $sliderThumbShadowSize: 1px;
 $sliderThumbShadowBlur: $grid;
 $sliderFillBorderSize: 1px;
+
+// Table column resizing widths
+$tableColumnMinWidth: 30;
+$tableColumnWidth: 150;
+$tableColumnMaxWidth: 200;
