feat: add option for Row to have an <a> element

--- a/packages/ui/src/Table/Row.module.scss
+++ b/packages/ui/src/Table/Row.module.scss
@@ -8,12 +8,12 @@
   }
 }
 
-.headerRow {
-  @include rowBase;
-}
-
 .row {
   @include rowBase;
+
+  &.link {
+    text-decoration: none;
+  }
 
   &:hover {
     background-color: c.$colorNeutralLighter;
@@ -26,4 +26,8 @@
       background-color: c.$colorInfoLight;
     }
   }
+}
+
+.headerRow {
+  @include rowBase;
 }
