--- a/packages/ui/styles/constants/_sizes.scss
+++ b/packages/ui/styles/constants/_sizes.scss
@@ -43,9 +43,9 @@ $selectMenuShadowSize: 1px !default;
 $selectMenuShadowBlur: 4px !default;
 
 /* doiuse-disable calc */
-$modalWidth: calc(100% - 40px);
+$modalWidth: calc(100% - $grid * 10);
 $modalMaxWidth: 960px !default;
-$modalHeight: calc(100% - 40px);
+$modalHeight: calc(100% - $grid * 10);
 /* doiuse-enable calc */
 
 // border radius on left/right size of the progress tracker
