feat: add left margin to close button

--- a/packages/ui/src/Modal.module.scss
+++ b/packages/ui/src/Modal.module.scss
@@ -23,6 +23,10 @@
   // TODO: Get color
   box-shadow: c.$grid * 1.25 c.$grid * 5 c.$grid * 20 0 #353d49;
 
+  .close {
+    margin-left: c.$grid * 3;
+  }
+
   .outline {
     position: absolute;
     border-radius: c.$borderRadius;
