feat: make Pagination a bit smaller and more readable

--- a/packages/ui/src/Pagination.module.scss
+++ b/packages/ui/src/Pagination.module.scss
@@ -33,7 +33,32 @@
       margin-right: c.$grid * 2;
     }
 
-    // Override button styles
+    // Override IconButton styles
+    .iconButton {
+      display: flex;
+      align-items: center;
+      background-color: c.$colorNeutralLighter;
+      border: 1px solid;
+      border-color: c.$colorNeutralLight;
+      height: c.$grid * 10;
+      padding: 0 c.$grid * 2;
+
+      &:hover,
+      &:active,
+      &.selected {
+        box-shadow: none;
+        border-color: c.$colorPrimary;
+      }
+
+      &:focus {
+        .outline {
+          box-shadow: none;
+        }
+        border-color: c.$colorAccessibilityOutline;
+      }
+    }
+
+    // Override Button styles
     .button {
       color: c.$colorTextSecondary;
       background-color: c.$colorNeutralLighter;
@@ -73,9 +98,9 @@
 
     .input {
       margin-top: 0;
-      // Comfortable to use with up to 4-digit numbers and small enough to not take much space
-      max-width: c.$grid * 30;
-      min-width: c.$grid * 30;
+      // Comfortable to use with up to 5-digit numbers and small enough to not take much space
+      max-width: c.$grid * 26;
+      min-width: c.$grid * 26;
     }
   }
 
@@ -89,7 +114,7 @@
 
     :global .hz-select-field__control {
       margin-top: 0;
-      // Comfortable to use with up to 3-digit numbers and small enough to not take much space
+      // Comfortable to use with up to 4-digit numbers and small enough to not take much space
       max-width: c.$grid * 25;
       min-width: c.$grid * 25;
     }
