--- a/packages/ui/styles/constants/_colors.scss
+++ b/packages/ui/styles/constants/_colors.scss
@@ -20,7 +20,9 @@ $colorWarningLight: #f9b721 !default;
 $colorWarning: #f47027 !default;
 $colorWarningDark: #ad6200 !default;
 
+$colorErrorLight: #e75851 !default;
 $colorError: #b00020 !default;
+$colorErrorDark: #891b15 !default;
 
 $colorText: #041a3b !default;
 $colorTextSecondary: #707482 !default;
