--- a/packages/ui/__stories__/utils.scss
+++ b/packages/ui/__stories__/utils.scss
@@ -6,9 +6,14 @@
   align-items: center;
 }
 
+.modalPortal {
+  width: 100%;
+  height: 100%;
+}
+
 .modalWrapper {
   width: 100%;
-  height: 150px;
+  height: 500px;
 }
 
 .modal {
