--- a/packages/ui/src/Modal.module.scss
+++ b/packages/ui/src/Modal.module.scss
@@ -4,8 +4,7 @@
 .overlay {
   width: 100%;
   height: 100%;
-  background-color: c.$colorText;
-  opacity: 0.8;
+  background-color: transparentize(c.$colorText, 0.2);
 }
 
 .modal {
@@ -16,14 +15,17 @@
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
-  // TODO: get spacing
-  max-width: c.$modalMaxWidth;
   width: c.$modalWidth;
+  min-width: c.$modalMinWidth;
+  max-width: c.$modalMaxWidth;
   max-height: c.$modalMaxHeight;
   z-index: c.$zIndex1000;
+  padding: c.$grid * 5;
 
   .close {
-    margin-left: c.$grid * 3;
+    position: absolute;
+    right: c.$grid * 1.5;
+    top: c.$grid * 2;
   }
 
   .outline {
@@ -53,30 +55,27 @@
   }
 
   .header {
-    height: c.$grid * 14;
     display: flex;
     flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-    padding: 0 c.$grid * 6;
-    // TODO: Get color
-    border-bottom: c.$borderWidth solid c.$colorNeutralLight;
+    margin: 0 c.$grid * 5 c.$grid * 5 0;
 
-    @include c.typographyBodyNormal('bold');
+    .icon {
+      margin-right: c.$grid * 2.5;
+    }
+
+    .title {
+      margin: 0;
+    }
   }
 
   .footer {
-    height: c.$grid * 16;
     display: flex;
     flex-direction: row;
-    justify-content: flex-end;
     align-items: center;
-    padding: 0 c.$grid * 6;
-    // TODO: Get color
-    border-top: c.$borderWidth solid c.$colorNeutralLight;
+    margin: c.$grid * 5 0 c.$grid * 2.5;
 
     & > button:not(:first-of-type) {
-      margin-left: c.$grid * 3;
+      margin-left: c.$grid * 5;
     }
   }
 }
