--- a/packages/ui/src/Dialog.module.scss
+++ b/packages/ui/src/Dialog.module.scss
@@ -2,24 +2,25 @@
 
 .dialog {
   box-sizing: border-box;
-  width: c.$dialogWidth;
-  min-width: unset;
-  max-width: unset;
-  max-height: unset;
-  min-height: c.$dialogMinHeight;
   display: flex;
   flex-direction: column;
-
-  .dialogHeader {
-    margin-right: 0 !important;
-    justify-content: center;
-  }
+  // Note: Unset properties set by Modal
+  min-width: unset;
+  max-width: unset;
+  min-height: c.$dialogMinHeight;
+  max-height: unset;
+  width: c.$dialogWidth;
 
   .dialogBody {
     display: flex;
     flex-direction: column;
     flex: 1;
     text-align: center;
+
+    .dialogHeader {
+      margin-right: 0;
+      justify-content: center;
+    }
 
     .dialogContent {
       flex: 1;
@@ -37,12 +38,12 @@
 
       // Note: In case there are 2 buttons
       & > button:not(:only-of-type) {
-        // Note: Disable right borders
+        // Note: Unset right border-radiuses of the first one
         &:nth-of-type(1) {
           border-top-right-radius: unset;
           border-bottom-right-radius: unset;
         }
-        // Note: Disable left borders
+        // Note: Unset left border-radiuses of the second one
         &:nth-of-type(2) {
           border-top-left-radius: unset;
           border-bottom-left-radius: unset;
