Fix typography and work-break

--- a/packages/ui/src/Toast.module.scss
+++ b/packages/ui/src/Toast.module.scss
@@ -14,7 +14,9 @@
   }
 
   .content {
-    word-break: break-all;
+    @include c.typographyBodyNormal;
+
+    word-break: break-word;
   }
 
   .close {
