--- a/packages/ui/src/Modal.module.scss
+++ b/packages/ui/src/Modal.module.scss
@@ -8,12 +8,14 @@
   top: 0;
   left: 0;
   z-index: c.$zIndex1000;
+  pointer-events: none;
 }
 
 .overlay {
   width: 100%;
   height: 100%;
   background-color: transparentize(c.$colorText, 0.2);
+  pointer-events: all;
 }
 
 .modal {
