--- a/packages/ui/src/IconButton.module.scss
+++ b/packages/ui/src/IconButton.module.scss
@@ -1,40 +1,19 @@
 @use '../styles/constants' as c;
+@use '../styles/helpers' as h;
 
 .iconButton {
-  z-index: c.$zIndex200;
-  display: inline-flex;
+  display: inline-block;
   cursor: pointer;
-  border: none;
-  position: relative;
+  border: c.$borderWidth solid transparent;
   background-color: transparent;
   border-radius: c.$borderRadius;
   color: inherit;
   padding: 0;
   box-sizing: border-box;
 
-  .outline {
-    z-index: c.$zIndex100;
-    position: absolute;
-    pointer-events: none;
-    width: 100%;
-    height: 100%;
-    border-radius: c.$borderRadius;
-    border-color: c.$colorAccessibilityOutline;
-  }
-
   .body {
     display: inline-flex;
-  }
-
-  &:focus,
-  &.focus {
-    // Do not remove outline for high-contrast modes
-    // https://stackoverflow.com/a/52616313
-    outline: c.$outlineWidth solid transparent;
-
-    .outline {
-      box-shadow: 0 0 0 c.$outlineWidth c.$colorAccessibilityOutline;
-    }
+    vertical-align: middle;
   }
 
   &:disabled {
@@ -44,20 +23,30 @@
   &.primary {
     color: c.$colorPrimary;
 
+    &:hover,
+    &.hover {
+      background-color: c.$colorNeutralLighter;
+      border-color: c.$colorNeutralLight;
+    }
+
     &:disabled {
+      background-color: transparent;
+      border-color: transparent;
       color: c.$colorTextSecondary;
     }
 
-    &:hover,
-    &.hover {
-      &:not(:disabled) {
-        background-color: c.$colorNeutralLighter;
-        box-shadow: inset 0 0 0 c.$borderWidth c.$colorNeutralLight;
-      }
+    &:focus,
+    &.focus {
+      @include h.outlineFormField;
     }
   }
 
   &.transparent {
     color: inherit;
+
+    &:focus,
+    &.focus {
+      @include h.outlineFormField;
+    }
   }
 }
