feat: basic layout close to done

--- a/packages/ui/styles/constants/_sizes.scss
+++ b/packages/ui/styles/constants/_sizes.scss
@@ -53,3 +53,7 @@ $sliderThumbHoverBorderSize: 1px;
 $sliderThumbShadowSize: 1px;
 $sliderThumbShadowBlur: $grid;
 $sliderFillBorderSize: 1px;
+
+$emptyStateMaxWidth: 960px !important;
+$emptyStateButtonMinWidthNormal: 120px !default;
+$emptyStateButtonMinWidthLarge: 140px !default;
