--- a/packages/ui/styles/constants/_sizes.scss
+++ b/packages/ui/styles/constants/_sizes.scss
@@ -25,6 +25,8 @@ $iconStrokeWidth: 2px !default;
 
 $iconSizeSmall: $grid * 4 !default;
 $iconSizeNormal: $grid * 6 !default;
+$iconSizeMedium: $grid * 8 !default;
+$iconSizeLarge: $grid * 10 !default;
 $iconSizeXLarge: $grid * 12 !default;
 
 $tooltipArrowSize: 6px !default;
