--- a/packages/ui/src/EmptyState.module.scss
+++ b/packages/ui/src/EmptyState.module.scss
@@ -52,7 +52,7 @@
   &.horizontal {
     flex: 1;
     flex-direction: row;
-    text-align: initial;
+    text-align: start;
 
     .icon {
       flex: 0 0 auto;
