fix: generate Table data and put them into costant, remove namor

--- a/packages/ui/src/Pagination.module.scss
+++ b/packages/ui/src/Pagination.module.scss
@@ -92,7 +92,7 @@
       margin-right: c.$grid * 2.5;
     }
 
-    .input {
+    .inputContainer {
       margin-top: 0;
       // Comfortable to use with up to 5-digit numbers and small enough to not take much space
       max-width: c.$grid * 26;
